Added additional resources to the Resources page

--- a/resources.html
+++ b/resources.html
@@ -87,16 +87,24 @@
                     </ul>
                 </div>
                 <div class="column has-text-left">
-                    <h3 class="subtitle has-text-weight-semibold">Video Links</h3>
+                    <h3 class="subtitle has-text-weight-semibold">Videos & Online Resources</h3>
                     <ul>
                         <li class="margin-bottom-li" id="textbook">
                             <p>
-
+                                <a href="https://www.journey2master.com/" class="has-text-info has-text-weight-semibold">Journey
+                                    2 Master</a>
+                                <br>
+                                <em>A great, down-to-earth look into the trade</em>
                             </p>
                         </li>
                         <li class="margin-bottom-li" id="codebook">
                             <p>
-
+                                <a href="https://mikeholt.com/" class="has-text-info has-text-weight-semibold">Mike Holt Enterprises</a>
+                                <br>
+                                <em>In-depth (<em>Free!</em>) 
+                                <a href="https://www.mikeholt.com/newsletter-categories.php">
+                                        newsletters
+                                </a> and educational resources taught from from the perspective of over 40 years in the electrical trade.</em>
                             </p>
                         </li>
                     </ul>
@@ -107,7 +115,8 @@
     <section class="section" style="padding-top: 0">
         <div class="container">
             <h3 class="subtitle has-text-weight-semibold" style="margin-bottom: 5px">Glossary Reference</h3>
-            <p style="padding-bottom: 20px">Use the dropdown menu to select the chapter you're on. There you'll see a breakdown
+            <p style="padding-bottom: 20px">Use the dropdown menu to select the chapter you're on. There you'll see a
+                breakdown
                 of page numbers that reference the keyword glossary in the textbook.</a>
             </p>
             <div class="dropdown">
