--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <!-- Scripts -->
-    <!-- <script src="main.js"></script> -->
+    <script src="main.js"></script>
 </body>
 
 </html>
