Added new font families, updated Quizlet embed to function, and added disclaimers

--- a/about.html
+++ b/about.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Roboto+Mono:700|Roboto+Slab:300,400" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar has-background-info" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item has-text-white" href="/chapters.html">
+            <a class="navbar-item has-text-white is-logo-font" href="/chapters.html">
                 Apprentricity
             </a>
 
@@ -28,13 +29,13 @@
 
         <div class="navbar-menu">
             <div class="navbar-end">
-                <a href="about.html" class="navbar-item has-text-white">
+                <a href="about.html" class="navbar-item has-text-white has-text-weight-semibold">
                     About
                 </a>
-                <a href="instructions.html" class="navbar-item has-text-white">
+                <a href="instructions.html" class="navbar-item has-text-white has-text-weight-semibold">
                     Instructions
                 </a>
-                <a href="resources.html" class="navbar-item has-text-white">
+                <a href="resources.html" class="navbar-item has-text-white has-text-weight-semibold">
                     Resources
                 </a>
             </div>
