--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Roboto+Mono:700|Roboto+Slab:300,400" rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
             <header class="navbar">
                 <div class="container">
                     <div class="navbar-brand">
-                        <a class="navbar-item has-text-white">
+                        <a class="navbar-item has-text-white is-logo-font">
                             Apprentricity
                         </a>
                     </div>
@@ -30,17 +31,17 @@
         <!-- Hero content: will be in the middle -->
         <div class="hero-body is-paddingless">
             <div class="container has-text-centered">
-                <h1 class="title has-text-white is-2">
-                    Be a <em class="has-text-info">Great</em> Electrician's Apprentice
+                <h1 class="title has-text-white is-2 is-title-font">
+                    Be a <span class="has-text-info">Great</span> Electrician's Apprentice
                 </h1>
-                <h2 class="subtitle has-text-white">
+                <p class="subtitle has-text-white is-subtitle-font" style="margin-top: 20px">
                     Apprentricity is the <span class="has-text-info">simple</span> online quiz and study tool for
                     electricity
                     students at <span class="has-text-weight-bold">Atlantic Technical College</span>.
 
                     <i class="has-text-info fas fa-asterisk fa-xs"></i>
 
-                </h2>
+                </p>
 
                 <a href="chapters.html" class="button custom-button-width is-info has-text-weight-semibold" style="height: 40px">
                     Get Started
