--- a/instructions.html
+++ b/instructions.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Roboto+Mono:700|Roboto+Slab:300,400" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar has-background-info" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item has-text-white" href="/chapters.html">
+            <a class="navbar-item has-text-white is-logo-font" href="/chapters.html">
                 Apprentricity
             </a>
 
@@ -28,13 +29,13 @@
 
         <div class="navbar-menu">
             <div class="navbar-end">
-                <a href="about.html" class="navbar-item has-text-white">
+                <a href="about.html" class="navbar-item has-text-white has-text-weight-semibold">
                     About
                 </a>
-                <a href="instructions.html" class="navbar-item has-text-white">
+                <a href="instructions.html" class="navbar-item has-text-white has-text-weight-semibold">
                     Instructions
                 </a>
-                <a href="resources.html" class="navbar-item has-text-white">
+                <a href="resources.html" class="navbar-item has-text-white has-text-weight-semibold">
                     Resources
                 </a>
             </div>
@@ -58,14 +59,15 @@
                     <h3 class="subtitle has-text-weight-semibold">1. Choose Your Chapter</h3>
                     <p>
                         Quizzes on Apprentricity are organized as multiple choice selections taken
-                        directly from the <a href="resources.html#textbook" class="has-text-info">Textbook</a>. Pick the one
+                        directly from the <a href="resources.html#textbook" class="has-text-info">Textbook</a>. Pick
+                        the one
                         you need most help with.
                     </p>
                 </div>
                 <div class="column has-text-left">
                     <h3 class="subtitle has-text-weight-semibold">2. Take A Quiz</h3>
                     <p>
-                        Every quiz is a made up of a series of 15 questions from each chapter. Take a
+                        Every quiz is a made up of a series of up to six questions from each chapter. Take a
                         quiz muliple times to help yourself retain the information. The quizzes will
                         never contain trick questions.
                     </p>
@@ -73,7 +75,7 @@
                 <div class="column has-text-left">
                     <h3 class="subtitle has-text-weight-semibold">3. See Your Results</h3>
                     <p>
-                        Compare your answers to the test bank to see how well you did. If you feel like
+                        Compare your answers to the test bank right away to see how well you did. If you feel like
                         you got it, great! And if you feel like you could use more practice, no problem.
                         Just take another quiz.
                     </p>
@@ -81,6 +83,41 @@
             </div>
         </div>
     </section>
+
+    <section class="section">
+        <div class="container has-text-centered">
+            <div class="columns">
+                <div class="column has-text-left">
+                    <h3 class="subtitle has-text-weight-semibold">Additional Instructions</h3>
+                    <div class="content">
+                        <p>
+                            To help you study even more effectively, Apprentricity uses
+                            <a href="https://quizlet.com/join/uFHhNAjYZ">Quizlet
+                            </a>
+                            for the quiz-taking interface.
+                            <a href="instructions.html/#quizlet-disclaimer">
+                                <i class="has-text-info fas fa-asterisk fa-xs"></i>
+                            </a>
+                        </p>
+
+                        <p><strong class="has-text-grey is-italic">Quizlet's mission:</strong></p>
+                        <blockquote>To help students (and their teachers) practice and master whatever they are
+                            learning.
+                            Quizlet provides engaging, customizable activities with contributions from people
+                            everywhere.
+                        </blockquote>
+
+                        <p>
+                            Quizlet's robust study interface gives you the option to study using the standard
+                            multiple choice quiz format built into Apprentricity, or select from several different
+                            <em>Study Modes</em>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="section">
         <div class="container has-text-centered">
             <div class="columns">
@@ -89,20 +126,19 @@
                     <p>
                         Along with the simple quizzes, you can find a selection of helpful resources
                         to assist you with your studies. The <a href="resources.html" class="has-text-info">Resources</a>
-                        page features a keyword glossary reference
-                        organized by chapter, as well as a list of references to the National Electrical Code (NEC), and videos
-                        you to get you
-                        excited about the trade.
+                        page features a list of references to the National Electrical Code (NEC), links to useful websites, and videos
+                        you to get you excited about the trade.
                     </p>
                     <br>
                     <p>
                         If there's ever any resource you'd like to see added, please send an email to
-                        Apprentricity[at]grindfusion.com.
+                        <a href="mailto:apprentricity@grindfusion.com">Apprentricity[at]grindfusion.com</a>.
                     </p>
                 </div>
             </div>
         </div>
     </section>
+
     <section class="section">
         <div class="container has-text-centered">
             <div class="columns">
@@ -111,12 +147,13 @@
                     </h3>
                     <p>
                         I try my best to keep this website simple and free of errors in code and material. However, I
-                        cannot guarantee this website will be without problems. In the event you find an error 
+                        cannot guarantee this website will be without problems. In the event you find an error
                         (e.g. grammar, misspellings, dead links, etc.) please let me know.
                     </p>
                     <br>
                     <p>
-                        Send what you find to Apprentricity-Errors[at]grindfusion.com, and I'll handle it as soon as I can.
+                        Send what you find to <a href="mailto:apprentricity-errors@grindfusion.com">Apprentricity-Errors[at]grindfusion.com</a>, and I'll handle it as soon as I
+                        can.
                     </p>
                 </div>
             </div>
@@ -143,6 +180,13 @@
                 <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. <br> The website content is licensed
                 <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC
                         BY-NC-SA 4.0</a> <br><br>
+            </p>
+
+            <p id="quizlet-disclaimer" class="subtitle has-text-weight-light" style="font-size: x-small">
+                <span><i class="has-text-info fas fa-asterisk fa-xs"></i></span>
+                Quizlet, Inc. is not affiliated with this website. The views and opinions
+                expressed on this website do not necessarily reflect those of Quizlet, Inc.
+                and its affiliates.
             </p>
         </div>
     </footer>
