--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar has-background-info" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-            <a class="navbar-item has-text-white" href="/chapters.html">
+            <a class="navbar-item has-text-white is-logo-font" href="/chapters.html">
                 Apprentricity
             </a>
 
@@ -28,13 +28,13 @@
 
         <div class="navbar-menu">
             <div class="navbar-end">
-                <a href="about.html" class="navbar-item has-text-white">
+                <a href="about.html" class="navbar-item has-text-white has-text-weight-semibold">
                     About
                 </a>
-                <a href="instructions.html" class="navbar-item has-text-white">
+                <a href="instructions.html" class="navbar-item has-text-white has-text-weight-semibold">
                     Instructions
                 </a>
-                <a href="resources.html" class="navbar-item has-text-white">
+                <a href="resources.html" class="navbar-item has-text-white has-text-weight-semibold">
                     Resources
                 </a>
             </div>
@@ -105,45 +105,6 @@
             </div>
         </div>
     </section>
-    <section class="section" style="padding-top: 0">
-        <div class="container">
-            <h3 class="subtitle has-text-weight-semibold" style="margin-bottom: 5px">Glossary Reference</h3>
-            <p style="padding-bottom: 20px">Use the dropdown menu to select the chapter you're on. There you'll see a
-                breakdown
-                of page numbers that reference the keyword glossary in the textbook.</a>
-            </p>
-            <div class="dropdown">
-                <div class="dropdown-trigger">
-                    <button class="button">
-                        <span>Select Chapter</span>
-                        <span class="icon is-small">
-                            <i class="fas fa-angle-down" aria-hidden="true"></i>
-                        </span>
-                    </button>
-                </div>
-                <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                    <div class="dropdown-content">
-                        <a href="#" class="dropdown-item">
-                            Chapter 1
-                        </a>
-                        <a class="dropdown-item">
-                            Chapter 2
-                        </a>
-                        <a href="#" class="dropdown-item is-active">
-                            Chapter 3
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            Chapter 4
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            Chapter 5
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <footer class="footer">
         <div class="content has-text-centered">
