Added icon logo for tab, updated usage notes and their placement, added new markup for burger menu logo

--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Online Quizzes for Electricity Students - Apprentricity</title>
+    <title>About - Apprentricity</title>
+    <link rel="icon" href="apprentricity-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -88,6 +89,13 @@
                 <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC
                         BY-NC-SA 4.0</a> <br><br>
             </p>
+
+            <p id="fontawesome-license-attribution" class="subtitle has-text-weight-light" style="font-size: x-small">
+                Lightning bolt logo created using <a href="https://fontawesome.com/">Font Awesome</a>. Changes made to the appearance
+                of the bolt icon include addition of dark circle background and color change to white. The Font Awesome bolt icon is
+                used under <a href="https://fontawesome.com/license">License</a>. Font Awesome is not affiliated with or a sponsor
+                of Apprentricity.
+            </p>
         </div>
     </footer>
 
@@ -96,7 +104,7 @@
         <div class="menu" style="position: relative; top: 10vh">
             <p class="menu-label">
                 <br> <!-- Spacer for Presentation -->
-                Apprentricity Logo
+                <img class="body-logo" src="apprentricity-logo.png" alt="Apprentricity - The Quiz and Study Resource for ATC Electricity Students">
                 <br> <!-- Spacer for Presentation -->
                 <br> <!-- Spacer for Presentation -->
             </p>
