--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Online Quizzes for Electricity Students - Apprentricity</title>
+    <link rel="icon" href="apprentricity-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -40,7 +41,6 @@
                     students at <span class="has-text-weight-bold">Atlantic Technical College</span>.
 
                     <i class="has-text-info fas fa-asterisk fa-xs"></i>
-
                 </p>
 
                 <a href="chapters.html" class="button custom-button-width is-info has-text-weight-semibold" style="height: 40px">
@@ -59,6 +59,12 @@
                      Atlantic Technical College is not affiliated with this website. The views and opinions
                      expressed on this website do not necessarily reflect those of Atlantic Technical College
                      and its affiliates.
+                </p>
+                <p id="fontawesome-license-attribution" class="subtitle has-text-weight-light" style="font-size: x-small">
+                    Lightning bolt logo created using <a href="https://fontawesome.com/">Font Awesome</a>. Changes made to the appearance
+                    of the bolt icon include addition of dark circle background and color change to white. The Font Awesome bolt icon is
+                    used under <a href="https://fontawesome.com/license">License</a>. Font Awesome is not affiliated with or a sponsor
+                    of Apprentricity.
                 </p>
             </div>
         </div>
