--- a/instructions.html
+++ b/instructions.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Online Quizzes for Electricity Students - Apprentricity</title>
+    <title>Instructions - Apprentricity</title>
+    <link rel="icon" href="apprentricity-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -126,7 +127,8 @@
                     <p>
                         Along with the simple quizzes, you can find a selection of helpful resources
                         to assist you with your studies. The <a href="resources.html" class="has-text-info">Resources</a>
-                        page features a list of references to the National Electrical Code (NEC), links to useful websites, and videos
+                        page features a list of references to the National Electrical Code (NEC), links to useful
+                        websites, and videos
                         you to get you excited about the trade.
                     </p>
                     <br>
@@ -152,7 +154,8 @@
                     </p>
                     <br>
                     <p>
-                        Send what you find to <a href="mailto:apprentricity-errors@grindfusion.com">Apprentricity-Errors[at]grindfusion.com</a>, and I'll handle it as soon as I
+                        Send what you find to <a href="mailto:apprentricity-errors@grindfusion.com">Apprentricity-Errors[at]grindfusion.com</a>,
+                        and I'll handle it as soon as I
                         can.
                     </p>
                 </div>
@@ -161,12 +164,15 @@
     </section>
     <section class="section">
         <div class="container has-text-centered">
-            <div class="notification">
-                <p class="subtitle has-size-6">
-                    Anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays
-                    young.
-                    The greatest thing in life is to keep your mind young. - Henry Ford
-                </p>
+            <div class="content">
+                <blockquote>
+                    <p>
+                        Anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning
+                        stays
+                        young.
+                        The greatest thing in life is to keep your mind young. - Henry Ford
+                    </p>
+                </blockquote>
             </div>
         </div>
     </section>
@@ -188,6 +194,15 @@
                 expressed on this website do not necessarily reflect those of Quizlet, Inc.
                 and its affiliates.
             </p>
+            <p id="fontawesome-license-attribution" class="subtitle has-text-weight-light" style="font-size: x-small">
+                Lightning bolt logo created using <a href="https://fontawesome.com/">Font Awesome</a>. Changes made to
+                the appearance
+                of the bolt icon include addition of dark circle background and color change to white. The Font Awesome
+                bolt icon is
+                used under <a href="https://fontawesome.com/license">License</a>. Font Awesome is not affiliated with
+                or a sponsor
+                of Apprentricity.
+            </p>
         </div>
     </footer>
 
@@ -196,7 +211,7 @@
         <div class="menu" style="position: relative; top: 10vh">
             <p class="menu-label">
                 <br> <!-- Spacer for Presentation -->
-                Apprentricity Logo
+                <img class="body-logo" src="apprentricity-logo.png" alt="Apprentricity - The Quiz and Study Resource for ATC Electricity Students">
                 <br> <!-- Spacer for Presentation -->
                 <br> <!-- Spacer for Presentation -->
             </p>
