--- a/resources.html
+++ b/resources.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Online Quizzes for Electricity Students - Apprentricity</title>
+    <title>Resources - Apprentricity</title>
+    <link rel="icon" href="apprentricity-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Roboto+Mono:700|Roboto+Slab:300,400" rel="stylesheet">
 </head>
 
 <body>
@@ -92,12 +94,14 @@
                         </li>
                         <li class="margin-bottom-li" id="codebook">
                             <p>
-                                <a href="https://mikeholt.com/" class="has-text-info has-text-weight-semibold">Mike Holt Enterprises</a>
+                                <a href="https://mikeholt.com/" class="has-text-info has-text-weight-semibold">Mike
+                                    Holt Enterprises</a>
                                 <br>
-                                <em>In-depth (<em>Free!</em>) 
-                                <a href="https://www.mikeholt.com/newsletter-categories.php">
+                                <em>In-depth (<em>Free!</em>)
+                                    <a href="https://www.mikeholt.com/newsletter-categories.php">
                                         newsletters
-                                </a> and educational resources taught from from the perspective of over 40 years in the electrical trade.</em>
+                                    </a> and educational resources taught from from the perspective of over 40 years in
+                                    the electrical trade.</em>
                             </p>
                         </li>
                     </ul>
@@ -115,6 +119,15 @@
                 <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC
                         BY-NC-SA 4.0</a> <br><br>
             </p>
+            <p id="fontawesome-license-attribution" class="subtitle has-text-weight-light" style="font-size: x-small">
+                Lightning bolt logo created using <a href="https://fontawesome.com/">Font Awesome</a>. Changes made to
+                the appearance
+                of the bolt icon include addition of dark circle background and color change to white. The Font Awesome
+                bolt icon is
+                used under <a href="https://fontawesome.com/license">License</a>. Font Awesome is not affiliated with
+                or a sponsor
+                of Apprentricity.
+            </p>
         </div>
     </footer>
 
@@ -123,7 +136,7 @@
         <div class="menu" style="position: relative; top: 10vh">
             <p class="menu-label">
                 <br> <!-- Spacer for Presentation -->
-                Apprentricity Logo
+                <img class="body-logo" src="apprentricity-logo.png" alt="Apprentricity - The Quiz and Study Resource for ATC Electricity Students">
                 <br> <!-- Spacer for Presentation -->
                 <br> <!-- Spacer for Presentation -->
             </p>
