Fixed some typos on the instructions page

--- a/instructions.html
+++ b/instructions.html
@@ -69,7 +69,7 @@
                     <h3 class="subtitle has-text-weight-semibold">2. Take A Quiz</h3>
                     <p>
                         Every quiz is a made up of a series of up to six questions from each chapter. Take a
-                        quiz muliple times to help yourself retain the information. The quizzes will
+                        quiz multiple times to help yourself retain the information. The quizzes will
                         never contain trick questions.
                     </p>
                 </div>
@@ -78,7 +78,7 @@
                     <p>
                         Compare your answers to the test bank right away to see how well you did. If you feel like
                         you got it, great! And if you feel like you could use more practice, no problem.
-                        Just take another quiz.
+                        Just take the quiz again.
                     </p>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                         <p>
                             Quizlet's robust study interface gives you the option to study using the standard
                             multiple choice quiz format built into Apprentricity, or select from several different
-                            <em>Study Modes</em>.
+                            Study Modes.
                         </p>
                     </div>
                 </div>
@@ -128,8 +128,7 @@
                         Along with the simple quizzes, you can find a selection of helpful resources
                         to assist you with your studies. The <a href="resources.html" class="has-text-info">Resources</a>
                         page features a list of references to the National Electrical Code (NEC), links to useful
-                        websites, and videos
-                        you to get you excited about the trade.
+                        websites, and videos to get you excited about the trade.
                     </p>
                     <br>
                     <p>
@@ -150,12 +149,12 @@
                     <p>
                         I try my best to keep this website simple and free of errors in code and material. However, I
                         cannot guarantee this website will be without problems. In the event you find an error
-                        (e.g. grammar, misspellings, dead links, etc.) please let me know.
+                        (e.g. incorrect grammar, misspellings, dead links, etc.) please let me know.
                     </p>
                     <br>
                     <p>
                         Send what you find to <a href="mailto:apprentricity-errors@grindfusion.com">Apprentricity-Errors[at]grindfusion.com</a>,
-                        and I'll handle it as soon as I
+                        or send me a <a href="https://twitter.com/buildpax">Tweet</a> and I'll handle it as soon as I
                         can.
                     </p>
                 </div>
