Updated resources page to include link icons next to website links

--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Roboto+Mono:700|Roboto+Slab:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Roboto+Mono:700|Roboto+Slab:300,400" rel="stylesheet">
 </head>
 
 <body>
@@ -88,6 +88,7 @@
                             <p>
                                 <a href="https://www.journey2master.com/" class="has-text-info has-text-weight-semibold">Journey
                                     2 Master</a>
+                                <i class="fas fa-link"></i>
                                 <br>
                                 <em>A great, down-to-earth look into the trade</em>
                             </p>
@@ -95,7 +96,8 @@
                         <li class="margin-bottom-li" id="codebook">
                             <p>
                                 <a href="https://mikeholt.com/" class="has-text-info has-text-weight-semibold">Mike
-                                    Holt Enterprises</a>
+                                    Holt Enterprises
+                                </a><i class="fas fa-link"></i>
                                 <br>
                                 <em>In-depth (<em>Free!</em>)
                                     <a href="https://www.mikeholt.com/newsletter-categories.php">
