Updated contact emails

--- a/instructions.html
+++ b/instructions.html
@@ -133,7 +133,7 @@
                     <br>
                     <p>
                         If there's ever any resource you'd like to see added, please send an email to
-                        <a href="mailto:apprentricity@grindfusion.com">Apprentricity[at]grindfusion.com</a>.
+                        <a href="mailto:apprentricity@davidgagne.co">Apprentricity[at]grindfusion.com</a>.
                     </p>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                     </p>
                     <br>
                     <p>
-                        Send what you find to <a href="mailto:apprentricity-errors@grindfusion.com">Apprentricity-Errors[at]grindfusion.com</a>,
+                        Send what you find to <a href="mailto:apprentricity-errors@davidgagne.co">Apprentricity-Errors[at]grindfusion.com</a>,
                         or send me a <a href="https://twitter.com/buildpax">Tweet</a> and I'll handle it as soon as I
                         can.
                     </p>
