Updated feature request link on burger menu and html overflow function when burger menu is active

--- a/instructions.html
+++ b/instructions.html
@@ -127,8 +127,7 @@
                     <p>
                         Along with the simple quizzes, you can find a selection of helpful resources
                         to assist you with your studies. The <a href="resources.html" class="has-text-info">Resources</a>
-                        page features a list of references to the National Electrical Code (NEC), links to useful
-                        websites, and videos to get you excited about the trade.
+                        page features links to useful websites and videos to get you excited about the trade.
                     </p>
                     <br>
                     <p>
@@ -225,8 +224,9 @@
                 </p>
                 <br> <!-- Spacer for Presentation -->
                 <li>
-                    <a class="button is-info custom-button-width has-text-weight-semibold custom-button-width">Submit
-                        Idea</a>
+                    <p class="has-text-white">
+                        Send your feature requests to <a href="mailto:apprentricity@davidgagne.co">apprentricity[at]davidgagne.co</a>
+                    </p>
                 </li>
             </ul>
         </div>
