Added Ugly's book to resources page.

--- a/resources.html
+++ b/resources.html
@@ -49,7 +49,7 @@
             </h1>
             <h2 class="subtitle has-text-weight-normal">
                 These resources are the foundation of Apprentricity. They are a sample of the educational material I
-                use(d)
+                used
                 as an electricity student at Atlantic Technical College in Coral Springs, Florida.
             </h2>
         </div>
@@ -77,6 +77,15 @@
                                 <em>NFPA 70 - National Electrical Code, International Code&reg; Series</em>
                                 <br>
                                 by National Fire Protection Association (NFPA)
+                            </p>
+                        </li>
+                        <li class="margin-bottom-li" id="codebook">
+                            <p>
+                                <span class="has-text-info has-text-weight-semibold">Electrician's Pocket Reference</span>
+                                <br>
+                                <em>Ugly’s Electrical References, 2017 Edition</em>
+                                <br>
+                                by Jones & Bartlett Learning
                             </p>
                         </li>
                     </ul>
